typescript/checker/tests/conformance/es6/Symbols/symbolType7.ts.stderr
error: TS2362 {
    span: Span {
        lo: BytePos(
            44,
        ),
        hi: BytePos(
            45,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/es6/Symbols/symbolType7.ts:3:1
  |
3 | s << s;
  | ^

error: TS2363 {
    span: Span {
        lo: BytePos(
            49,
        ),
        hi: BytePos(
            50,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/es6/Symbols/symbolType7.ts:3:6
  |
3 | s << s;
  |      ^

error: TS2362 {
    span: Span {
        lo: BytePos(
            52,
        ),
        hi: BytePos(
            53,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/es6/Symbols/symbolType7.ts:4:1
  |
4 | s << 0;
  | ^

error: TS2362 {
    span: Span {
        lo: BytePos(
            60,
        ),
        hi: BytePos(
            61,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/es6/Symbols/symbolType7.ts:5:1
  |
5 | s >> s;
  | ^

error: TS2363 {
    span: Span {
        lo: BytePos(
            65,
        ),
        hi: BytePos(
            66,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/es6/Symbols/symbolType7.ts:5:6
  |
5 | s >> s;
  |      ^

error: TS2362 {
    span: Span {
        lo: BytePos(
            68,
        ),
        hi: BytePos(
            69,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/es6/Symbols/symbolType7.ts:6:1
  |
6 | s >> 0;
  | ^

error: TS2362 {
    span: Span {
        lo: BytePos(
            76,
        ),
        hi: BytePos(
            77,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/es6/Symbols/symbolType7.ts:7:1
  |
7 | s >>> s;
  | ^

error: TS2363 {
    span: Span {
        lo: BytePos(
            82,
        ),
        hi: BytePos(
            83,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/es6/Symbols/symbolType7.ts:7:7
  |
7 | s >>> s;
  |       ^

error: TS2362 {
    span: Span {
        lo: BytePos(
            85,
        ),
        hi: BytePos(
            86,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/es6/Symbols/symbolType7.ts:8:1
  |
8 | s >>> 0;
  | ^

